testdata/result/query/!bad_hint_select.sql.txt
--- !bad_hint_select.sql
@ select 1

--- Error
syntax error: testdata/input/query/!bad_hint_select.sql:1:3: expected token: {, but: SELECT
  1|  @ select 1
   |    ^~~~~~


--- AST
&ast.QueryStatement{
  Query: &ast.BadQueryExpr{
    BadNode: &ast.BadNode{
      NodeEnd: 10,
      Tokens:  []*token.Token{
        &token.Token{
          Kind: "@",
          Raw:  "@",
          End:  1,
        },
        &token.Token{
          Kind:  "SELECT",
          Space: " ",
          Raw:   "select",
          Pos:   2,
          End:   8,
        },
        &token.Token{
          Kind:  "<int>",
          Space: " ",
          Raw:   "1",
          Base:  10,
          Pos:   9,
          End:   10,
        },
      },
    },
  },
}

--- SQL
@ select 1
